--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
   "name": "svg-craft",
   "description": "A tool to create SVG graphics with basic shapes.",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": "Michael Daniel Padilla <michaeldpadilla@gmail.com> (https://mikedpad.com)",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/mikedpad/svg-craft.git"
   },
-  "keywords": [
-    "svg",
-    "craft",
-    "creator"
-  ],
+  "keywords": ["svg", "craft", "creator"],
   "scripts": {
     "start": "react-scripts start",
     "lint": "npm run lint:eslint && npm run lint:prettier",
-    "lint:eslint": "eslint 'src/**/*.{js,jsx}'",
-    "lint:prettier": "prettier --check 'src/**/*.{js,jsx}'",
+    "lint:eslint": "eslint --format=pretty 'src/**/*.{js,jsx}'",
+    "lint:prettier": "prettier --check 'src/**/*.{js,jsx,ts,tsx}'",
     "build": "react-scripts build",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
@@ -28,31 +24,30 @@
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/styles": "^4.9.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.5.0",
-    "@testing-library/user-event": "^7.2.1",
-    "polished": "^3.4.4",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-scripts": "3.4.0",
-    "styled-components": "^5.0.1"
+    "tslib": "^1.11.1"
   },
   "devDependencies": {
+    "@types/react": "^16.9.23",
+    "@types/react-dom": "^16.9.5",
+    "@typescript-eslint/eslint-plugin": "^2.22.0",
+    "@typescript-eslint/parser": "^2.22.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-better-styled-components": "^1.1.2",
+    "eslint-config-typescript": "^3.0.0",
+    "eslint-formatter-pretty": "^3.0.1",
+    "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "^2.20.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^2.5.0",
     "gh-pages": "^2.2.0",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "typescript": "^3.8.3"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
